Replaced Map.of with ImmutableMap.of according to the StileGuide YAMLWitnessContentTest